--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,14 @@
 
 .body-wrapper {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
+    row-gap: 5rem;
     background-color: #060606;
     scroll-behavior: smooth;
     overflow-y: scroll;
+    padding: 15rem;
 }
 
 /* Custom scrollbar styling for .body-wrapper (Google DeepMind style) */
@@ -150,11 +152,129 @@
 
 .hero-section {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 0 10rem;
+    padding: 0rem;
     color: white;
 }
+
+.hero-left {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    justify-content: top;
+}
+
+.hero-left h1 {
+    font-size: 3.5rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+.header{
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+}
+
+.hero-chips{
+    display: flex;
+    flex-direction: row;
+    column-gap: 1rem;
+    align-items: center;
+    color: #9aa0a6;
+}
+
+.hero-chip-text{
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #9aa0a6;
+}
+
+.hero-chip-link{
+    text-decoration: none;
+    color: #9aa0a6;
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: 0.8rem 2rem;
+    border: solid;
+    border-width: 1px;
+    border-color: #2c2c2c;
+    border-radius: 9999px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.hero-chip-link:hover{
+    background-color: #2c2c2c;
+    color: #9aa0a6;
+}
+
+.learn-more{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.learn-more a{
+    text-decoration: none;
+    color: #9aa0a6;
+    font-size: 1.2rem;
+    font-weight: 500;
+    transition: color 0.3s ease;
+}
+
+.learn-more:hover{
+    color: white;
+    column-gap: 0.8rem;
+    transition: color 0.3s ease, column-gap 0.3s ease;
+}
+
+.hero-image {
+    width: 100%;
+    height: 50rem;
+    background-size: fill;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 1rem;
+    justify-content: center;
+    align-items: baseline;
+    overflow: hidden;
+}
+
+.hero-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* border-radius: 1rem; */
+}
+
+.hero-image:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+
+.hero-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    overflow-y: auto; /* Allow scrolling only inside hero-right */
+    scrollbar-width: none; /* Firefox */
+    
+}
+
+.hero-right::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
+}
+
+
+
