--- a/styles.css
+++ b/styles.css
@@ -73,11 +73,13 @@
 .logo-image {
     width: 10rem;
     height: auto;
+    cursor: pointer;
 }
 
 .logo-image img{
     width: 100%;
     height: auto;
+    cursor: pointer;
 }
 
 .logo-arrow{
@@ -135,7 +137,7 @@
     flex-direction: row;
     column-gap: 1rem;
     align-items: center;
-    padding: 1rem;
+    padding: 0.8rem 1rem;
     border: none;
     border-radius: 4px;
     font-size: 1rem;
