--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     font-family: 'Google Sans Flex', Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0; 
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 
 .body-wrapper {
@@ -1012,6 +1012,10 @@
 
     .hero-chips{
         display: none;
+    }
+
+    .hero-img-chips{
+        font-size: 1rem;
     }
 
     .hero-blog-card{
